--- a/app/src/main/res/drawable/check_button_gradient.xml
+++ b/app/src/main/res/drawable/check_button_gradient.xml
@@ -2,8 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 <item>
     <shape android:shape="rectangle">
-        <corners android:radius="60dp"/>
-        <gradient android:startColor="#7a8afa" android:endColor="#4958dc" android:angle="0"/>
+        <corners android:radius="20dp"/>
+        <gradient android:startColor="#C6FFDD" android:endColor="#f7797d" android:angle="0"/>
     </shape>
 </item>
 </selector>
