--- a/app/src/main/res/layout/active_game_screen.xml
+++ b/app/src/main/res/layout/active_game_screen.xml
@@ -124,9 +124,9 @@
                         android:layout_margin="10dp"
                         android:layout_weight="1"
                         android:background="@drawable/try_again_top_button"
-                        android:orientation="vertical"
                         android:clickable="true"
-                        android:focusable="true"   >
+                        android:focusable="true"
+                        android:orientation="vertical">
 
                         <ImageView
                             android:id="@+id/imageView8"
@@ -148,6 +148,58 @@
                     </LinearLayout>
 
                 </LinearLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/start_batton_background">
+
+                <TextView
+                    android:id="@+id/textView102"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="message"
+                    android:textColor="@color/white"
+                    android:textSize="20sp"
+                    app:layout_constraintBottom_toTopOf="@+id/textView122"
+                    app:layout_constraintEnd_toStartOf="@+id/textView112"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/textView122"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Word Count : "
+                    android:textColor="@color/white"
+                    android:textSize="20sp"
+                    app:layout_constraintEnd_toStartOf="@+id/textView112"
+                    app:layout_constraintTop_toBottomOf="@+id/textView112" />
+
+                <TextView
+                    android:id="@+id/textView92"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="10"
+                    android:textColor="@color/white"
+                    android:textSize="20sp"
+                    app:layout_constraintBottom_toTopOf="@+id/textView102"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/textView112"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Remaining Attemp : "
+                    android:textColor="@color/white"
+                    android:textSize="20sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -291,19 +343,21 @@
 
                         <ImageView
                             android:id="@+id/imageView7sd"
-                            android:layout_width="match_parent"
-                            android:layout_height="50dp"
+                            android:layout_width="109dp"
+                            android:layout_height="42dp"
                             android:layout_margin="10dp"
-                            app:srcCompat="@android:drawable/ic_media_rew" />
+                            app:srcCompat="@android:drawable/stat_sys_speakerphone" />
 
                         <TextView
                             android:id="@+id/textView66"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="8dp"
-                            android:text="Go to Back"
+                            android:text="Ask number. of Letters"
                             android:textAlignment="center"
                             android:textColor="#3F683E"
+
+                            android:textSize="20sp"
                             android:textStyle="bold" />
                     </LinearLayout>
 
@@ -317,8 +371,8 @@
 
                         <ImageView
                             android:id="@+id/imageViewsdaw"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            android:layout_width="116dp"
+                            android:layout_height="64dp"
                             android:layout_margin="10dp"
                             app:srcCompat="@drawable/video_call" />
 
@@ -327,7 +381,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="8dp"
-                            android:text="Get Help"
+                            android:text="Get Tip"
+                            android:textSize="20sp"
                             android:textAlignment="center"
                             android:textColor="#7182ef"
                             android:textStyle="bold" />
