--- a/app/src/main/res/layout/active_game_screen.xml
+++ b/app/src/main/res/layout/active_game_screen.xml
@@ -130,7 +130,7 @@
 
                         <ImageView
                             android:id="@+id/imageView8"
-                            android:layout_width="89dp"
+                            android:layout_width="123dp"
                             android:layout_height="44dp"
                             android:layout_margin="10dp"
                             app:srcCompat="@android:drawable/ic_popup_sync" />
@@ -152,52 +152,34 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:layout_marginTop="20dp"
-                android:background="@drawable/start_batton_background">
+                android:layout_height="80dp"
+                android:layout_margin="20dp"
 
-                <TextView
-                    android:id="@+id/textView102"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="message"
-                    android:textColor="@color/white"
-                    android:textSize="20sp"
-                    app:layout_constraintBottom_toTopOf="@+id/textView122"
-                    app:layout_constraintEnd_toStartOf="@+id/textView112"
-                    app:layout_constraintTop_toTopOf="parent" />
+                android:background="@drawable/messege_background_gradient">
 
-                <TextView
-                    android:id="@+id/textView122"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Word Count : "
-                    android:textColor="@color/white"
-                    android:textSize="20sp"
-                    app:layout_constraintEnd_toStartOf="@+id/textView112"
-                    app:layout_constraintTop_toBottomOf="@+id/textView112" />
-
-                <TextView
-                    android:id="@+id/textView92"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="10"
-                    android:textColor="@color/white"
-                    android:textSize="20sp"
-                    app:layout_constraintBottom_toTopOf="@+id/textView102"
-                    app:layout_constraintEnd_toEndOf="parent"
+                <ImageView
+                    android:id="@+id/imageViewMainMsg"
+                    android:layout_width="95dp"
+                    android:layout_height="77dp"
+                    android:layout_marginStart="8dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:srcCompat="@drawable/happyface"
+                    android:visibility="invisible" />
 
                 <TextView
-                    android:id="@+id/textView112"
+                    android:id="@+id/messageMain"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Remaining Attemp : "
-                    android:textColor="@color/white"
-                    android:textSize="20sp"
+                    android:layout_marginStart="32dp"
+                    android:text="You answer is Wrongeas"
+                    android:textAlignment="center"
+                    android:textColor="#F6FD7D"
+                    android:textSize="26sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
@@ -205,7 +187,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="180dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="6dp"
                 android:background="@drawable/start_batton_background">
 
                 <ImageView
@@ -213,6 +195,7 @@
                     android:layout_width="88dp"
                     android:layout_height="90dp"
                     android:layout_marginEnd="16dp"
+
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -236,7 +219,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
-                    android:text="Word Count : "
+                    android:text="Word Letters : "
                     android:textColor="@color/white"
                     android:textSize="20sp"
                     app:layout_constraintEnd_toEndOf="@+id/textView11"
@@ -268,12 +251,16 @@
 
                 <EditText
                     android:id="@+id/textUserInput"
-                    android:layout_width="227dp"
-                    android:layout_height="56dp"
+                    android:layout_width="300dp"
+                    android:layout_height="62dp"
+                    android:layout_marginStart="32dp"
                     android:layout_marginTop="24dp"
+                    android:background="@drawable/messege_background_gradient"
                     android:hint="Enter your text here"
+                    android:paddingLeft="16dp"
                     android:textColor="@color/white"
-                    app:layout_constraintEnd_toEndOf="parent"
+                    android:textColorHint="#FBCCCC"
+                    android:textSize="18sp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView12" />
 
@@ -287,28 +274,44 @@
                 android:layout_marginRight="20dp"
                 android:background="@drawable/start_batton_background">
 
-                <ImageView
-                    android:id="@+id/imageView3"
-                    android:layout_width="117dp"
-                    android:layout_height="48dp"
-                    android:layout_marginEnd="24dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
+                <TextView
+                    android:id="@+id/textView194"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="85dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="32dp"
+                    android:text="Time tacken"
+                    android:textColor="@color/white"
+                    android:textSize="18sp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/search" />
+                    app:layout_constraintStart_toEndOf="@+id/buttonChecked"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/textView192"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="84dp"
+                    android:layout_marginBottom="16dp"
+                    android:text="00.00"
+                    android:textColor="@color/white"
+                    android:textSize="18sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent" />
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/buttonChecked"
                     style="@android:style/Widget.Button"
                     android:layout_width="178dp"
                     android:layout_height="53dp"
+                    android:layout_marginStart="32dp"
                     android:background="@drawable/check_button_gradient"
                     android:text="Check Word"
                     android:textColor="#4B51D0"
                     android:textSize="20sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toStartOf="@+id/imageView3"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -316,9 +319,42 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginRight="20dp"
+                android:background="@drawable/start_batton_background">
+
+                <TextView
+                    android:id="@+id/textView17"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:text="Rhyming Word: "
+                    android:textColor="@color/white"
+                    android:textSize="20sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/textView202"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:text="After 5th Attempt "
+                    android:textColor="#E4C922"
+                    android:textSize="20sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/textView17"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="50dp"
-                >
+                android:layout_marginTop="10dp">
 
 
                 <LinearLayout
@@ -339,21 +375,25 @@
                         android:layout_margin="10dp"
                         android:layout_weight="1"
                         android:background="@drawable/purple_top_button"
+                        android:id="@+id/linearLayoutGetNoLetter"
+                        android:clickable="true"
+                        android:focusable="true"
                         android:orientation="vertical">
 
                         <ImageView
                             android:id="@+id/imageView7sd"
-                            android:layout_width="109dp"
-                            android:layout_height="42dp"
+                            android:layout_width="156dp"
+                            android:layout_height="46dp"
                             android:layout_margin="10dp"
-                            app:srcCompat="@android:drawable/stat_sys_speakerphone" />
+                            app:srcCompat="@android:drawable/ic_menu_view" />
 
                         <TextView
                             android:id="@+id/textView66"
-                            android:layout_width="match_parent"
+                            android:layout_width="128dp"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="8dp"
-                            android:text="Ask number. of Letters"
+                            android:layout_marginLeft="20dp"
+                            android:text="Get No of Letters"
                             android:textAlignment="center"
                             android:textColor="#3F683E"
 
@@ -367,6 +407,9 @@
                         android:layout_margin="10dp"
                         android:layout_weight="1"
                         android:background="@drawable/purple_top_button"
+                        android:id="@+id/linearLayoutPicLetter"
+                        android:clickable="true"
+                        android:focusable="true"
                         android:orientation="vertical">
 
                         <ImageView
@@ -381,15 +424,17 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="8dp"
-                            android:text="Get Tip"
-                            android:textSize="20sp"
+                            android:text="Pick a Letter"
                             android:textAlignment="center"
                             android:textColor="#7182ef"
+                            android:textSize="20sp"
                             android:textStyle="bold" />
                     </LinearLayout>
 
                 </LinearLayout>
             </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
         </LinearLayout>
     </ScrollView>
