--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -111,9 +111,10 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="8dp"
-                            android:text="Video Call"
+                            android:text="Your Score"
                             android:textAlignment="center"
-                            android:textColor="#7182ef"
+                            android:textColor="#2D199D"
+                            android:textSize="18sp"
                             android:textStyle="bold" />
                     </LinearLayout>
 
@@ -127,47 +128,24 @@
 
                         <ImageView
                             android:id="@+id/imageView8"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            android:layout_width="113dp"
+                            android:layout_height="47dp"
                             android:layout_margin="10dp"
-                            app:srcCompat="@drawable/video_call" />
+                            app:srcCompat="@android:drawable/star_big_on" />
 
                         <TextView
                             android:id="@+id/textView7"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="8dp"
-                            android:text="Video Call"
+                            android:text="Leader Board"
                             android:textAlignment="center"
-                            android:textColor="#7182ef"
+                            android:textColor="#2D199D"
+                            android:textSize="18sp"
                             android:textStyle="bold" />
                     </LinearLayout>
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="10dp"
-                        android:layout_weight="1"
-                        android:background="@drawable/purple_top_button"
-                        android:orientation="vertical">
 
-                        <ImageView
-                            android:id="@+id/imageView9"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_margin="10dp"
-                            app:srcCompat="@drawable/video_call" />
-
-                        <TextView
-                            android:id="@+id/textView8"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="8dp"
-                            android:text="Video Call"
-                            android:textAlignment="center"
-                            android:textColor="#7182ef"
-                            android:textStyle="bold" />
-                    </LinearLayout>
 
                 </LinearLayout>
             </androidx.constraintlayout.widget.ConstraintLayout>
@@ -211,7 +189,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="24dp"
-                    android:text="Play Now"
+                    android:text="Play Game"
                     android:textColor="#C8CBD1"
                     android:textSize="36sp"
                     android:textStyle="bold"
@@ -219,7 +197,7 @@
                     app:layout_constraintTop_toTopOf="@+id/imageView3" />
 
                 <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/button"
+                    android:id="@+id/gameStartBtn"
                     style="@android:style/Widget.Button"
                     android:layout_width="108dp"
                     android:layout_height="48dp"
